SubVersion: $Id: ChangeLog 1826 2006-02-09 20:48:04Z roms $

Run './configure --enable-static=yes --enable-shared=no' for use with
	ValGrind. Run 'valgrind --tool=memcheck --leak-check=yes ./test'

Log:

- 07/07/2006, version 0.0.5: roms
	- added 0x5d0x40 => IDList detokenization (TI84+)

- 05/06/2006, version 0.0.4: roms
	- renamed stdints.h into stdints4.h
	
- 07/04/2006, version 0.0.3: roms
	- added support of the new TI84+ & TItanium USB hand-helds.
	- increased SO major number due to API changes

- ??/03/2006, version 0.0.2: kevinkofler
	- added iconv.c for an iconv-compatible interface

- 11/02/2006, version 0.0.1: roms
	- creation of library (idea suggested by Kevin Kofler)
	- imported code from TiEmu (Kevin's ticonv.c) and tifiles2 (Romain's transcode.c)
	